# Gladius

./: .gitignore  Cargo.toml  README.md  license.txt  rustfmt.toml
src/: logger.rs  main.rs
src/board/: bitboard.rs  bitboards.rs  board.rs  castle_rights.rs  file.rs  game_state.rs  mod.rs  piece.rs  player.rs  player_board.rs  rank.rs  square.rs  test.rs
src/board/test/: bitboard.rs  file.rs  mod.rs  piece.rs  player.rs  rank.rs  square.rs
src/engine/: calculator.rs  heuristic.rs  mod.rs  search.rs
src/engine/test/: calculator.rs  heuristic.rs  mod.rs
src/game/: basic_moves.rs  mod.rs  semilegal_moves.rs  test.rs  valid_moves.rs
src/rules/: basic_moves.rs  castle_rights.rs  check_detection.rs  fen_parser.rs  game_state.rs  legal_moves.rs  mod.rs  move_.rs  move_application.rs  movement.rs  player_board.rs  semilegal_moves.rs  test.rs
src/rules/test/: basic_moves.rs  castle_rights.rs  check_detection.rs  fen_parser.rs  game_state.rs  legal_moves.rs  mod.rs  move_application.rs  player_board.rs  semilegal_moves.rs
